--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlstring": "Data Source=JOSEVERDEZOTO-2;Database=Tickets;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
 }
