User Models & DataTable

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "sqlstring": "Data Source=JOSEVERDEZOTO-2;Database=Tickets;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "ApiSettings": {
+    "SecretKey": "ClaveSecretaMuySeguraParaElApiJoseVerdezoto"
   }
 }
